tests/ui/closures/issue-72408-nested-closures-exponential.stderr
error: reached the type-length limit while instantiating `dup::<{closure@$DIR/issue-72408-nested-closures-exponential.rs:13:5: 13:13}>`
  --> $DIR/issue-72408-nested-closures-exponential.rs:47:13
   |
LL |     let f = dup(f);
   |             ^^^^^^
   |
   = help: consider adding a `#![type_length_limit="29360121"]` attribute to your crate

error: aborting due to 1 previous error

